final stylings. Rounded borders and image alignment fixed to same plane

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 50px 200 px;
+    margin: 0 200px;
 }
 
 .content_title {
@@ -98,9 +98,8 @@
     
     height: 100px;
     max-width: 100px;
-    border:10px;
-    border-color: #3882F6;
-    border-radius: 20%;
+    border:3px solid #3882F6;
+    border-radius: 5px;
     
 }
 
@@ -108,7 +107,7 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 0;
-    justify-content: space-around;
+    
     align-items:center;
     text-align: center;
     gap: 12px; 
@@ -121,8 +120,8 @@
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    justify-content:flex-end;
     
+    flex: 1 1 auto;
 }
 
 .quote {
@@ -147,10 +146,11 @@
     background-color: #3882F6;    
     color: #E5E7EB;
     padding: 40px 60 px;
-    margin: 60px;
+    margin: 60px 200px;
     display: flex;
     align-items:center;
     justify-content:space-around;
+    border-radius: 5px;
 }
 .footer button {
     border:#E5E7EB ;
